--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@ section1
                         <div class="step-num">
                             <span>STEP</span>01</div>
                     </div>
-                    <img src="img/tro_01.png">
+                    <img class="pcshow" src="img/tro_01.png">
+                    <img class="mbshow" src="img/tro_01s.png">
                     <p class="txt">序号<span class="stepnum">1</span> ，通过域名进入到主系统代理（和之前保持不变）</p>
                 </div>
                 <!--columns end-->
@@ -182,7 +183,8 @@ section1
                         <div class="step-num">
                             <span>STEP</span>02</div>
                     </div>
-                    <img src="img/tro_02.png">
+                    <img class="pcshow" src="img/tro_02.png">
+                    <img class="mbshow" src="img/tro_02s.png">
                     <p class="txt">序号<span class="stepnum">2</span> ，打开新窗口，跳转至独立的皇冠体育代理后台，厅主子账号首次跳转需要设置密码。
                     </p>
                 </div>
@@ -198,7 +200,8 @@ section1
                         <div class="step-num">
                             <span>STEP</span>01</div>
                     </div>
-                    <img src="img/tro_03.png">
+                    <img class="pcshow" src="img/tro_03.png">
+                    <img class="mbshow" src="img/tro_03s.png">
                     <p class="txt">输入独立的皇冠体育代理后台域名，进入独立的体育代理后台</p>
                 </div>
                 <!--columns end-->
@@ -213,7 +216,8 @@ section1
                         <div class="step-num">
                             <span>STEP</span>02</div>
                     </div>
-                    <img src="img/tro_04.png">
+                    <img class="pcshow" src="img/tro_04.png">
+                    <img class="mbshow" src="img/tro_04s.png">
                     <div class="txt">独立的体育后台功能点包括：
                         <br/> 
                         <div class="nowrap">序号 <span class="stepnum">1</span> 的账号管理，</div>
