--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@ section1
                     </div>
                     <img class="pcshow" src="img/tro_01.png">
                     <img class="mbshow" src="img/tro_01s.png">
-                    <p class="txt">序号<span class="stepnum">1</span> ，通过域名进入到主系统代理（和之前保持不变）</p>
+                    <p class="txt">序号<span class="stepnum">1</span> ，通过域名进入到主系统代理（和之前保持不变）
+                        <br/><a href="http://xianggang.sit1gpoa.bwt18.com/agent/agent" target="_blank">http://xianggang.sit1gpoa.bwt18.com/agent/agent</a>
+                    </p>
                 </div>
                 <!--columns end-->
             </div>
@@ -202,7 +204,11 @@ section1
                     </div>
                     <img class="pcshow" src="img/tro_03.png">
                     <img class="mbshow" src="img/tro_03s.png">
-                    <p class="txt">输入独立的皇冠体育代理后台域名，进入独立的体育代理后台</p>
+                    <p class="txt">输入独立的皇冠体育代理后台域名，进入独立的体育代理后台
+                        <br/>
+                        <a href="http://xisai.sit1tya.bwt18.com/agent/agent" target="_blank">http://xisai.sit1tya.bwt18.com/agent/agent</a>
+                    </p>
+                
                 </div>
                 <!--columns end-->
             </div>
