--- a/index.html
+++ b/index.html
@@ -412,7 +412,9 @@ problem section
                     <!--answer content-->
                     <div class="accordion-section-content">
                         <span class="answer-1"></span>
-                        <p>不能操作，通常是不会有这种情况的，除非碰巧我们的彩票或者体育中间件维护，有疑问可咨询我们的客服人员。</p>
+                        <p>不能操作，通常是不会有这种情况的，除非碰巧我们的彩票或者体育中间件维护，有疑问可咨询我们的客服人员。
+                            <img src="img/tro_02s.png">
+                        </p>
                     </div>
                 </div>
                 <!--QA 08 End-->
