--- a/index.html
+++ b/index.html
@@ -324,7 +324,12 @@ problem section
                     <!--answer content-->
                     <div class="accordion-section-content">
                         <span class="answer-1"></span>
-                        <p>本质上是没有区别的，只是登录方式不同，但是如果是通过主系统跳转的方式，厅主子账号权限需要注意，首次跳转需要设置密码的。</p>
+                        <p>本质上是没有区别的，只是登录方式不同，但是如果是通过主系统跳转的方式，厅主子账号权限需要注意，首次跳转需要设置密码的。
+                            <div class="txt">
+                                <img src="img/qapic_01.jpg">
+                                序号 <i class="stepnum">1</i> 处，提示您首次登录，需要设置密码，点击确定后进入密码设置界面。
+                            </div>  
+                        </p>
                     </div>
                 </div>
                 <!--QA 02 End-->
@@ -338,7 +343,12 @@ problem section
                     <!--answer content-->
                     <div class="accordion-section-content">
                         <span class="answer-1"></span>
-                        <p>有限制，独立的体育后台，无论是单独的域名登录还是主系统跳转，合法用户仅支持厅主及其子账号权限，其他层级用户我们均视为非法登录。</p>
+                        <p>有限制，独立的体育后台，无论是单独的域名登录还是主系统跳转，合法用户仅支持厅主及其子账号权限，其他层级用户我们均视为非法登录。
+                            <div class="txt">
+                                <img src="img/qapic_02.jpg"> 序号
+                                <i class="stepnum">1</i> ，使用的账号必须是厅主及其子账号权限，其他账号视为非法账号。
+                            </div>
+                        </p>
                     </div>
                 </div>
                 <!--QA 03 End-->
@@ -352,7 +362,13 @@ problem section
                     <!--answer content-->
                     <div class="accordion-section-content">
                         <span class="answer-1"></span>
-                        <p>体育代理后台的退税数据来自于体育总控，不会读取之前主系统总控的数据，所以需要重新设置。</p>
+                        <p>体育代理后台的退税数据来自于体育总控，不会读取之前主系统总控的数据，所以需要重新设置。
+                            <div class="txt">
+                                <img src="img/qapic_03.jpg"> 
+                                点击序号 
+                                <i class="stepnum">1</i> ，进入皇冠体育退水设定，弹出序号 <i class="stepnum">2</i> ，在序号 <i class="stepnum">2</i> 处设定具体退水类型。
+                            </div>
+                        </p>
                     </div>
                 </div>
                 <!--QA 04 End-->
@@ -366,7 +382,12 @@ problem section
                     <!--answer content-->
                     <div class="accordion-section-content">
                         <span class="answer-1"></span>
-                        <p>体育代理后台的退税数据来自于体育总控，不会读取之前主系统总控的数据，所以需要重新设置。</p>
+                        <p>体育代理后台的退税数据来自于体育总控，不会读取之前主系统总控的数据，所以需要重新设置。
+                            <div class="txt">
+                                <img src="img/qapic_04.jpg"> 点击序号
+                                <i class="stepnum">1</i> ，进入皇冠体育退水设定，弹出序号 <i class="stepnum">2</i> ，在序号 <i class="stepnum">2</i> 处设定具体退水类型。
+                            </div>
+                        </p>
                     </div>
                 </div>
                 <!--QA 05 End-->
@@ -410,7 +431,6 @@ problem section
                     <div class="accordion-section-content">
                         <span class="answer-1"></span>
                         <p>不能操作，通常是不会有这种情况的，除非碰巧我们的彩票或者体育中间件维护，有疑问可咨询我们的客服人员。
-                            <img src="img/tro_02s.png">
                         </p>
                     </div>
                 </div>
