--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>主系统改版项目引导</title>
+    <title>教学指南</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="css/base.css" rel="stylesheet" type="text/css">
     <link href="css/layout.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@ Header
             <!--Logo-->
             <div class="nav-logo">
                 <a class="smoothscroll" href="#home">
-                    <span id="l2">主系统改版项目引导宣传</span>
+                    <span id="l2"><i class="icon-graduation-cap"></i>教学指南</span>
                 </a>
             </div>
             <!--Nav-menu-->
@@ -248,37 +248,37 @@ section1
                             <tr>
                                 <td class="tdw">应用组成</td>
                                 <td>由多个完整页面构成</td>
-                                <td>一个外壳页面和多个页面片段构成</td>
+                                <td><strong class="tdb">一个外壳页面和多个页面片段构成</strong></td>
                             </tr>
                             <tr>
                                 <td class="tdw">跳转方式</td>
                                 <td>页面间的跳转是从一个页面跳转到另一个页面</td>
-                                <td>页面片段之间的跳转是把一个页面片段删除或隐藏，加在另一个页面片段并显示出来，属于片段之间的模拟跳转，并没有离开壳页面</td>
+                                <td><strong class="tdb">页面片段之间的跳转是把一个页面片段删除或隐藏，加在另一个页面片段并显示出来，属于片段之间的模拟跳转，并没有离开壳页面</strong></td>
                             </tr>
                             <tr>
                                 <td class="tdw">刷新方式</td>
                                 <td>整页刷新</td>
-                                <td>页面片段局部刷新</td>
+                                <td><strong class="tdb">页面片段局部刷新</strong></td>
                             </tr>
                             <tr>
                                 <td class="tdw">跳转后公共资源是否重新加载</td>
                                 <td>Yes</td>
-                                <td>No</td>
+                                <td><strong class="tdb">No</strong></td>
                             </tr>
                             <tr>
                                 <td class="tdw">用户体验</td>
                                 <td>页面间切换加载慢，不够流畅，用户体验差， 尤其是在移动设备上</td>
-                                <td>页面片段间的切换快，极具流畅度，用户体验好， 包括在移动设备上</td>
+                                <td><strong class="tdb">页面片段间的切换快，极具流畅度，用户体验好， 包括在移动设备上</strong></td>
                             </tr>
                             <tr>
                                 <td class="tdw">页面传递数据</td>
                                 <td>依赖URL，cookie或者LocalStorage</td>
-                                <td>因为在一个页面内，传递数据容易，更少的依赖</td>
+                                <td><strong class="tdb">因为在一个页面内，传递数据容易，更少的依赖</strong></td>
                             </tr>
                             <tr>
                                 <td class="tdw">独立的皇冠体育代理后台</td>
                                 <td>系统臃肿，功能复杂</td>
-                                <td>系统简单有效，使用更加灵活</td>
+                                <td><strong class="tdb">系统简单有效，使用更加灵活</strong></td>
                             </tr>
                         </tbody>
                     </table>
